# Search-Without-Recall

./: .gitignore  LICENSE  README.md  algorithm.py  pyproject.toml  requirements.txt
examples/: quick_start.py
tests/: test_import.py
