[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search-without-recall-algorithms"
version = "0.1.0"
description = "Algorithms 1–4 for Search Without Recall and Gaussian Learning (double-blind)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  # Numba is optional but recommended:
  "numba>=0.58; platform_python_implementation == 'CPython'"
]

[tool.setuptools]
py-modules = ["algorithm"]

# Optional dev tooling (editors can ignore safely)
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
